nat.tf
# Create a NAT Gateway
resource "aws_nat_gateway" "netflix-nat-gateway" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.netflix-pub-sub-1.id

  tags = {
    Name = "netflix-natgw-01"
  }
}
