vpc.tf
resource "aws_vpc" "netflix-vpc" {
  cidr_block       = "10.0.0.0/16"
    tags = {
    Name = "netflix-vpc"
  }
}
